--- a/_includes/lecturetopics.html
+++ b/_includes/lecturetopics.html
@@ -35,7 +35,7 @@
                         {% for recommended in topic.recommendedLiterature %}
                         <li class="mb-4">
                             <i class="bi bi-chevron-double-right lec-icon"></i> <a href="{{recommended.url}}">{{recommended.title}}</a>
-                            {% if optional.timeMinutes %}
+                            {% if recommended.timeMinutes %}
                             <span class="badges"><span class="badge badge-{{recommended.timeBadge}}">{{recommended.timeType}}</span>{% if recommended.timeMinutes > 0 %}<span class="badge badge-secondary">{{recommended.timeMinutes}} min</span>{% endif %}</span>
                             {% endif %}
                         </li>
