--- a/_css/style.css
+++ b/_css/style.css
@@ -20,6 +20,10 @@
     list-style: none;
   }
   
+  .assignmentlist ul{
+    list-style: none;
+  }
+
   ul h6:not(:first-of-type){
     margin-top: 15px;
   }
